--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -86,14 +86,19 @@ demo功能可参考下面的桌面端/移动端使用手册。
 </tr>
 </table>
 
+正式接入前，请阅读[购买指南](../%E8%B4%AD%E4%B9%B0%E6%8C%87%E5%8D%97.md)后，发送邮件申请开通服务。
+
 **PAAS方案接入**
 
 1. 通过集成云端API，实现课件转码和录制等功能。
-2. 客户按自身的业务逻辑，集成互动白板、音视频和IM SDK，完成上课流程的闭环。
+2. 客户按自身的业务逻辑，集成互动白板、实时音视频和云通信，完成上课流程的闭环。
+3. 客户也可以集成TIC源码，该源码集成了互动白板、实时音视频和IM，可快速完成上课流程的闭环。
 
 - [文档转码服务](./PaaS/%E6%96%87%E6%A1%A3%E8%BD%AC%E7%A0%81.md)
 - [后台实时录制服务](./PaaS/%E5%AE%9E%E6%97%B6%E5%BD%95%E5%88%B6.md)
-- [TIC 辅助集成互动白板、实时音视频和IM](./PaaS/%E5%BF%AB%E9%80%9F%E5%BC%80%E5%A7%8B.md)
 - [互动白板](./PaaS/SDK文档/互动白板功能说明.md)
 - [实时音视频](https://github.com/tencentyun/TRTCSDK)
 - [云通信](https://github.com/tencentyun/TIMSDK)
+- [TIC快速接入](./PaaS/%E5%BF%AB%E9%80%9F%E5%BC%80%E5%A7%8B.md)
+
+正式接入前，请阅读[购买指南](../%E8%B4%AD%E4%B9%B0%E6%8C%87%E5%8D%97.md)后，发送邮件申请开通服务。
