--- a/Docs/PaaS/SDK文档/互动白板功能说明.md
+++ b/Docs/PaaS/SDK文档/互动白板功能说明.md
@@ -38,12 +38,12 @@
 <td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Mac.zip">立即体验</a></td>
 <td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/tic/TICDemo_Windows.zip">立即体验</a></td>
 </tr>
-<td>源码链接</td><td style="text-align:center"><a href="../../../Web">Source</a></td>
-<td style="text-align:center"><a href="../../../小程序">Source</a></td>
-<td style="text-align:center"><a href="../../../Android">Source</a></td>
-<td style="text-align:center"><a href="../../../iOS">Source</a></td>
-<td style="text-align:center"><a href="../../../macOS">Source</a></td>
-<td style="text-align:center"><a href="../../../Windows">Source</a></td>
+<td>源码链接</td><td style="text-align:center"><a href="../../../Web">Github</a></td>
+<td style="text-align:center"><a href="../../../小程序">Github</a></td>
+<td style="text-align:center"><a href="../../../Android">Github</a></td>
+<td style="text-align:center"><a href="../../../iOS">Github</a></td>
+<td style="text-align:center"><a href="../../../macOS">Github</a></td>
+<td style="text-align:center"><a href="../../../Windows">Github</a></td>
 </tr>
 </table>
 
