--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -92,7 +92,7 @@ demo功能可参考下面的桌面端/移动端使用手册。
 
 1. 通过集成云端API，实现课件转码和录制等功能。
 2. 客户按自身的业务逻辑，集成互动白板、实时音视频和云通信，完成上课流程的闭环。
-3. 客户也可以集成TIC源码，该源码集成了互动白板、实时音视频和IM，可快速完成上课流程的闭环。
+3. 客户也可以集成TIC源码，该源码集成了互动白板、实时音视频和云通信，可快速完成上课流程的闭环。
 
 - [文档转码服务](./PaaS/%E6%96%87%E6%A1%A3%E8%BD%AC%E7%A0%81.md)
 - [后台实时录制服务](./PaaS/%E5%AE%9E%E6%97%B6%E5%BD%95%E5%88%B6.md)
