白板接口文档

--- a/Docs/PaaS/SDK文档/互动白板接口文档.md
+++ b/Docs/PaaS/SDK文档/互动白板接口文档.md
@@ -403,6 +403,22 @@ TEduBoardArrowType endArrowType;
 |   startArrowType| TEduBoardArrowType | 起点箭头类型 |
 |   endArrowType| TEduBoardArrowType | 终点箭头类型 |
 
+**文件转码结果（TEduBoardTranscodeFileResult）**
+```
+static class TEduBoardTranscodeFileResult {                
+String title;        
+String url;        
+String resolution;      
+int pages;         
+}
+```
+|  成员  | 类型       | 说明 |
+| -- | --------- | ------------------ |
+|   title| String | 文件名 |
+|   url| String | 文件下载链接 |
+|   resolution| String | 文件分辨率，如"1024x768" |
+|   pages| int | 文件总页数 |
+
 ## 具体接口
 
 ### 基本流程接口
@@ -869,6 +885,9 @@ List<String> getBoardList();
 ### 文件操作接口
 
 **增加文件**
+
+此接口已废弃
+
 ```
 void addFile(String path);
 ```
@@ -882,6 +901,9 @@ void addFile(String path);
 4. 文件添加完成后，将自动切换到该文件。
 
 **增加 H5 动画 PPT 文件**
+
+此接口已废弃
+
 ```
 void addH5PPTFile(String url);
 ```
@@ -893,6 +915,18 @@ void addH5PPTFile(String url);
 1. 调用该接口后，SDK 会在后台进行 H5 加载，期间用户可正常进行其它操作；
 2. 加载成功或失败后会触发相应回调；
 3. H5 加载成功后，将自动切换到该文件。
+
+**添加转码文件**
+
+```
+void addTranscodeFile(TEduBoardTranscodeFileResult result);
+```
+|  参数值  | 类型       | 说明 |
+| -- | --------- | ------------------ |
+|   result| TEduBoardTranscodeFileResult | 文件转码结果 |
+>?
+1. [文档转码](../文档转码.md)成功后将返回文件信息作为addTranscodeFile的参数。
+2. 文件添加完成后，将自动切换到该文件。
 
 **删除文件**
 ```
