--- a/Docs/方案简介.md
+++ b/Docs/方案简介.md
@@ -57,7 +57,7 @@ demo功能可参考下面的桌面端/移动端使用手册。
 
 **SAAS方案接入**
 
-1. 客户端基本功能介绍。[客户端基本功能介绍](./SaaS/%e6%8e%a7%e5%88%b6%e5%8f%b0%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
+1. 客户端基本功能介绍。[客户端基本功能介绍](./SaaS/%e5%ae%a2%e6%88%b7%e7%ab%af%e5%9f%ba%e6%9c%ac%e5%8a%9f%e8%83%bd%e4%bb%8b%e7%bb%8d.md)
 2. 在控制台进行课堂管理和老师/学生管理。[控制台使用手册](./SaaS/%e6%8e%a7%e5%88%b6%e5%8f%b0%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
 3. 下载桌面端app，体验完整功能。[桌面端使用手册](./SaaS/%e4%ba%92%e5%8a%a8%e8%af%be%e5%a0%82SaaS%e6%a1%8c%e9%9d%a2%e7%ab%af%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
 4. 下载移动端app，体验完整功能。[移动端使用手册](./SaaS/%e4%ba%92%e5%8a%a8%e8%af%be%e5%a0%82SaaS%e7%a7%bb%e5%8a%a8%e7%ab%afApp%e4%bd%bf%e7%94%a8%e6%89%8b%e5%86%8c.md)
