--- a/Docs/PaaS/快速开始.md
+++ b/Docs/PaaS/快速开始.md
@@ -1,6 +1,6 @@
 ## Demo 下载
 
-|所属平台|Demo 下载|Demo 运行说明| TIC 接入文档| TEduBoard 接入文档|
+|所属平台|Demo 源码|Demo 运行说明| TIC 接入文档| TEduBoard 接入文档|
 |:-:|:-:|:-:|:-:|:-:|
 |Android|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../Android/README.md)|[Doc](./SDK文档/Android/互动课堂接入文档.md)|[Doc](./SDK文档/Android/互动白板接入文档.md)|
 |iOS|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../iOS/README.md)|[Doc](./SDK文档/iOS/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
@@ -8,6 +8,33 @@
 |macOS|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../macOS/README.md)|[Doc](./SDK文档/macOS/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
 |Web|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../Web/README.md)|[Doc](./SDK文档/Web/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
 |小程序|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../小程序/README.md)|[Doc](./SDK文档/小程序/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
+
+
+<font color="#FF0000">注意：</font> 由于`Github`默认不支持大文件上传，请您在clone代码前先安装[Git-LFS](./Git-LFS.md)，用于实现Github对大文件的支持。请使用以下命令clone代码，<font color="#FF0000">勿</font>直接`Download ZIP`。
+```
+git clone https://github.com/tencentyun/TIC.git
+```
+
+如果您访问 Github 或安装 Git-LFS 遇到问题，请使用腾讯云分流地址下载：
+
+<table>
+<tr>
+<th style="text-align:center">Web</th>
+<th style="text-align:center">小程序</th>
+<th style="text-align:center">Windows</th>
+<th style="text-align:center">Android</th>
+<th style="text-align:center">iOS</th>
+<th style="text-align:center">macOS</th>
+</tr>
+<tr>
+<td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/Web.zip">Download Zip</a></td>
+<td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/小程序.zip">Download Zip</a></td>
+<td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/Windows.zip">Download Zip</a></td>
+<td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/Android.zip">Download Zip</a></td>
+<td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/iOS.zip">Download Zip</a></td>
+<td style="text-align:center"><a href="https://tic-res-1259648581.file.myqcloud.com/demo/macOS.zip">Download Zip</a></td>
+</tr>
+</table>
 
 ## Demo 编译
 
