--- a/Docs/PaaS/快速开始.md
+++ b/Docs/PaaS/快速开始.md
@@ -10,7 +10,7 @@
 |小程序|[Github](https://github.com/tencentyun/TIC/tree/master)|[Doc](../../小程序/README.md)|[Doc](./SDK文档/小程序/互动课堂接入文档.md)|[Doc](./SDK文档/iOS/互动白板接入文档.md)|
 
 
-<font color="#FF0000">注意：</font> 由于`Github`默认不支持大文件上传，请您在clone代码前先安装[Git-LFS](./Git-LFS.md)，用于实现Github对大文件的支持。请使用以下命令clone代码，<font color="#FF0000">勿</font>直接`Download ZIP`。
+<font color="#FF0000">注意：</font> 由于`Github`默认不支持大文件上传，请您在clone代码前先安装[Git-LFS](../../Git-LFS.md)，用于实现Github对大文件的支持。请使用以下命令clone代码，<font color="#FF0000">勿</font>直接`Download ZIP`。
 ```
 git clone https://github.com/tencentyun/TIC.git
 ```
