废弃addFile/addH5PPTFile接口

--- a/Docs/PaaS/SDK文档/Web/互动白板接入文档.md
+++ b/Docs/PaaS/SDK文档/Web/互动白板接入文档.md
@@ -29,8 +29,7 @@
 | gotoBoard                | 跳转到指定白板页                       |
 | getCurrentBoard          | 获取当前白板页                         |
 | getBoardList             | 获取所有文件的白板列表                 |
-| addFile                  | 增加文件                               |
-| addH5PPTFile             | 增加 H5 动画 PPT 文件                  |
+| addTranscodeFile                  | 增加转码文件                               |
 | deleteFile               | 删除文件                               |
 | switchFile               | 切换文件                               |
 | getCurrentFile           | 获取当前文件 ID                        |
@@ -229,48 +228,6 @@ return boards = teduBoard.getBoardList()
 | --------- | --------- | ------------------ |
 |   boards | Array | 获取所有文件的白板列表 |
 
-#### 增加文件
-
-```
-var fid = teduBoard.addFile(fileObj)
-```
-
-- fileObj 为 String 类型
-
-> 当 fileObj 为 String 类型，表示只接收腾讯云 COS 文件 url 地址。适用于已有 COS 文件的 url 地址，且 COS 开通了转码功能。
-
-| 参数 |  类型   | 是否必填 | 说明 |
-| ----------- | -----------| ---- | ------------------ |
-| fileObj |  String | 是 | COS文件url地址，只支持PPT、PDF、Word、Excel |
-
-```
-teduBoard.addFile('http://e4fb-edu-1400127140-1257240443.cos.ap-shanghai.myqcloud.com/TIC/WEB/1557368577909_3.%E6%88%AA%E4%B8%80%E4%B8%AA%E5%87%A0%E4%BD%95%E4%BD%93.ppt')
-```
-
-- fileObj 为Object类型
-
-| fileObj参数 |  类型   | 是否必填 | 说明 |
-| ----------- | -----------| ---- | ------------------ |
-| data |   File | 是 | 文件对象，通常通过 document.getElementById('file_input').files[0] 获取 |
-| userData |   String | 否 | 自定义数据，在文件上传事件中回调回来 |
-
-|  返回值  | 类型       | 说明 |
-| --------- | --------- | ------------------ |
-|   fid | String | 返回当前上传文件的fid，如果成功，则fid为本次上传文件的fid，如果失败，则丢弃该fid，请结合文件上传状态TEB_FILEUPLOADSTATUS事件回调一起使用 |
-
-#### 增加H5动画PPT文件
-
-```
-var fid = teduBoard.addH5PPTFile(url)
-```
-
-| 参数 |  类型   | 是否必填 | 说明 |
-| ----------- | -----------| ---- | ------------------ |
-| url |   String | 是 | 要增加的H5动画PPT的URL |
-
-|  返回值  | 类型       | 说明 |
-| --------- | --------- | ------------------ |
-|   fid | String | 返回当前H5动画PPT文件的fid，如果返回空字符串，则表示重复上传，同时也会有重复上传的TEB_WARNING事件 |
 
 #### 删除文件
 
