--- a/Docs/PaaS/SDK文档/互动白板接口文档.md
+++ b/Docs/PaaS/SDK文档/互动白板接口文档.md
@@ -227,18 +227,9 @@ void onTEBGotoBoard(String boardId, String fileId);
 
 ### 文件操作回调
 
-**增加文件回调函数**
+**增加转码文件回调函数**
 ```
-void onTEBAddFile(String fileId);
-```
-|  参数值  | 类型       | 说明 |
-| -- | --------- | ------------------ |
-|   fileId| String  | 增加的白板页所属的文件 ID |
->?文件上传完成后才会触发该回调。
-
-**增加 H5 动画 PPT 文件回调函数**
-```
-void onTEBAddH5PPTFile(String fileId);
+void onTEBAddTranscodeFile(String fileId);
 ```
 |  参数值  | 类型       | 说明 |
 | -- | --------- | ------------------ |
@@ -883,38 +874,6 @@ List<String> getBoardList();
 
 
 ### 文件操作接口
-
-**增加文件**
-
-此接口已废弃
-
-```
-void addFile(String path);
-```
-|  参数值  | 类型       | 说明 |
-| -- | --------- | ------------------ |
-|   path| String | 要增加的文件路径，编码格式为 UTF8 |
->?
-1. 支持 PPT、PDF、Word 和 Excel；
-2. 当 path 指向一个有效的本地文件时，SDK 会先将文件上传到 COS 后再执行后续操作，此时会触发文件上传相关回调；
-3. 若 path 不是一个有效的本地文件路径，则会被当做 URL 处理，URL 必须指向腾讯云 COS 文件路径，否则接口调用无效；
-4. 文件添加完成后，将自动切换到该文件。
-
-**增加 H5 动画 PPT 文件**
-
-此接口已废弃
-
-```
-void addH5PPTFile(String url);
-```
-|  参数值  | 类型       | 说明 |
-| -- | --------- | ------------------ |
-|   path| String | 要增加的 H5 动画 PPT 的 URL |
-
->?
-1. 调用该接口后，SDK 会在后台进行 H5 加载，期间用户可正常进行其它操作；
-2. 加载成功或失败后会触发相应回调；
-3. H5 加载成功后，将自动切换到该文件。
 
 **添加转码文件**
 
