--- a/Docs/PaaS/快速开始.md
+++ b/Docs/PaaS/快速开始.md
@@ -38,7 +38,7 @@ git clone https://github.com/tencentyun/TIC.git
 
 ## Demo 编译
 
-为避免开发测试导致账号被强制下线，您需要替换自己的`SdkAppId`和测试账号信息。在 [实时音视频应用列表](https://console.cloud.tencent.com/rav) 中选择对应的应用，**点击下载公私钥**并输入私钥**生成 Demo 配置文件内容**，替换 Demo 中配置文件的账号内容即可开始测试。
+为避免开发测试导致账号被强制下线，您需要替换自己的`SdkAppId`和测试账号信息。在 [实时音视频应用列表](https://console.cloud.tencent.com/rav) 中选择对应的应用，单击**下载公私钥**并输入私钥**生成 Demo 配置文件内容**，替换 Demo 中配置文件的账号内容即可开始测试。
 
 |所属平台|配置文件路径|
 |-|-|
