--- a/Docs/PaaS/SDK文档/互动白板接口文档.md
+++ b/Docs/PaaS/SDK文档/互动白板接口文档.md
@@ -947,4 +947,23 @@ void clearFileDraws(String fileId);
 | -- | --------- | ------------------ |
 |   fileId| String | 文件 ID |
 
+### 其他接口
+
+**获取白板时间戳**
+```
+uint64_t getSyncTime();
+```
+|  返回值类型        | 说明 |
+|  --------- | ------------------ |
+|  uint64_t| 毫秒级时间戳 |
+
+**同步远端时间戳**
+```
+void syncRemoteTime(String userId, uint64_t timestamp);
+```
+|  参数值  | 类型       | 说明 |
+| -- | --------- | ------------------ |
+|   userId | String | 用户 ID |
+|   timestamp | uint64_t | 毫秒级时间戳 |
+
 
