--- a/Docs/PaaS/文档转码.md
+++ b/Docs/PaaS/文档转码.md
@@ -313,7 +313,7 @@ Body 参数（JSON 格式）
 | task_type   | string | 文档转码任务类型固定为`transcode` |
 | status      | string | 任务状态                       |
 | progress    | int    | 0-100的整数表示转码当前进度       |
-| result_url  | string | 转码完成后结果 URL               |
+| result_url  | string | 转码完成后结果 URL, 有效期3个月   |
 | resolution  | string | 文档的分辨率                    |
 | title       | string | 文档的文件名                    |
 | pages       | int    | 文档的总页数                    |
@@ -470,3 +470,5 @@ ppt 保存时，将字体库一起打包进 ppt。
 问题原因：ppt 的内容中含有一些不支持转码 h5 的元素，所以导致转码失败。
 解决方法：如果是 pptx 格式文件，可以用 powerpoint 另存为 ppt 格式，然后重新尝试转码。
 如果是 ppt 格式文件，可以用 powerpoint 另存为 pptx 格式，然后重新尝试转码
+4. 文档转码返回 url 的有效期是多长时间？  
+有效期3个月。3个月后，您需要重新调用文档转码服务
