--- a/Docs/PaaS/文档转码.md
+++ b/Docs/PaaS/文档转码.md
@@ -69,8 +69,8 @@ func GetMD5Hash(data []byte) string {
 1. 目前只支持包含`http://`或`https://`前缀的 URL。
 2. 请检查 URL 的访问权限，保证文档转码服务能正常访问并下载该文档原文件。如果您使用腾讯云对象存储（Cloud Object Storage，COS），请检查存储桶的访问权限为**公有读私有写**。您可以在腾讯云控制台设置存储桶的访问权限，具体请参考 [设置访问权限](https://cloud.tencent.com/document/product/436/13315)。
 3. 如果您使用其他的文件存储服务，请注意文件存储服务的上传带宽，文档转码服务提供**1分钟**的下载时间，如果下载不成功本次的转码请求将以失败终止。
-4. 默认情况下，PPT 文档（后缀名为`.ppt`或`.pptx`）会转码结果为`HTML5`页面，其他文档会转码为图片。
-5. 动态PPT转码的时间大约是每页1s，动态PPT转码结果的`HTML5`页面能够还原PPT原有的动画效果，文档转码为图片的时间大约为每页0.5s，
+4. 默认情况下，PPT 文档（后缀名为`.ppt`或`.pptx`）会转码成`HTML5`页面，能够还原PPT原有的动画效果，其他文档会转码成静态图片。
+5. PPT动态转码成`HTML5`页面的时间大约为每页1s，文档转码成静态图片的时间大约为每页0.5s，
 
 ### 请求文档转码
 
@@ -88,19 +88,19 @@ func GetMD5Hash(data []byte) string {
 
 URL 参数
 
-| 参数名   | 描述                                              |
-|:---------|:--------------------------------------------------|
-| sdkappid | 客户的 sdkappid                                    |
-| sign     | 用于鉴权的签名                                    |
+| 参数名       | 描述                                       |
+|:------------|:------------------------------------------|
+| sdkappid    | 客户的 sdkappid                            |
+| sign        | 用于鉴权的签名                               |
 | expire_time | 用于鉴权的签名过期时间，Unix 时间戳，单位秒       |
-| random   | 随机 int32 正整数，每次请求都需要带上，用于定位问题 |
+| random      | 随机 int32 正整数，每次请求都需要带上，用于定位问题 |
 
 Body 参数（JSON 格式）
 
-| 参数名         | 类型    | 描述                                                                                                                             |
-|:--------------|:-------|:--------------------------------------------------------------------------------------------------------------------------------|
-| url           | string | 在 [上传文档并获取链接](#jump4.1) 中获取的下载 URL，请检查 URL 的访问权限                                                                  |
-| is_static_ppt | bool   | 是否为静态PPT，默认为false，后缀名为`.ppt`或`.pptx`）会转码结果为`HTML5`页面，保留PPT原有的动画效果，如果该参数指定为true，会将PPT转码为图片，丢失所有的动画效果 |
+| 参数名         | 类型    | 描述                                                                                                                                                                     |
+|:--------------|:-------|:------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| url           | string | 在 [上传文档并获取链接](#jump4.1) 中获取的下载 URL，请检查 URL 的访问权限                                                                                                          |
+| is_static_ppt | bool   | 是否为静态PPT，默认为false，当`is_static_ppt`为false时，后缀名为`.ppt`或`.pptx`的文档会动态转码成`HTML5`页面，其他格式的文档会静态转码成图片，如果`is_static_ppt`为true，所有格式的文档会静态转码成图片 |
 
 请求示例：
 请将参数替换为实际值。
