1，添加 常见问题5 2，添加新的cos转码错误码

--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -368,7 +368,7 @@ Body 参数（JSON 格式）
 | -6     | 未知 ppt 格式                           | 请检查 PPT 格式是否正确                                    |
 | -7     | ppt 打开时发生异常                    | 请检查 PPT 格式是否正确                                    |
 | -8     | ppt 为只读格式                        | 不支持只读 ppt，请检查 PPT 格式是否正确                     |
-| -9     | ppt 转码失败                          | 请检查 PPT 格式是否正确                                    |
+| -9     | ppt 转码失败                          | ppt转换为pptx失败; 将ppt用PowerPoint手动转为pptx,确认打开pptx不会有任何报错后，</br>在使用转换后的pptx重新发起转码                                    |
 | -10    | pptx 格式解析错误                     | 请检查 PPT 格式是否正确                                    |
 | -11    | ppt 下载失败，未知错误                | 请检查 ppt 下载 URL 是否有效                                 |
 | -12    | h5 上传失败                           | 请联系客服人员或重试                                     |
@@ -409,6 +409,10 @@ Body 参数（JSON 格式）
 | -119  | 上传转码后的文件，到 cdn cos 失败  | 请联系维护人员或重试      |
 | -120  | cos 转码，未知错误               | 文件格式不支持             |
 | -121  | 超过最大页数                     | 不支持超过500页的文件转码   |
+| -122  | cos 转码打开本地文件失败     | 请联系维护人员 或 重试   |
+| -123  | cos 转码写本地文件失败                     | 请联系维护人员 或 重试   |
+| -124  | cos 转码文件内容为空                     | 请联系维护人员 或 重试   |
+| -125  | cos 转码获取分辨率失败                     | 请联系维护人员 或 重试   |
 | -3001 | 转换失败或者任务创建失败.          | 文件格式不支持             |
 | -3002 | 服务器过载，转换队列过长           | 请稍后重试转码             |
 | -3003 | 转换超时                        | 文件格式不支持             |
@@ -476,3 +480,6 @@ ppt 保存时，将字体库一起打包进 ppt。
 如果是 ppt 格式文件，可以用 powerpoint 另存为 pptx 格式，然后重新尝试转码
 4. 文档转码返回 url 的有效期是多长时间？  
 有效期3个月。3个月后，您需要重新调用文档转码服务
+5. 为什么会遇到"-9 ppt transform failed! Ppt Format not support!"错误呢？应该如何解决？
+问题原因：ppt 中，可能含有某些元素，导致转换成 pptx 失败
+解决方法：将ppt用PowerPoint手动转为pptx,确认打开pptx不会有任何报错后，在使用转换后的pptx重新发起转码
