--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -362,8 +362,8 @@ Body 参数（JSON 格式）
 | 0     | 任务执行成功                     |                          |
 | -1     | ppt 下载的 url 格式错误                 | 请检查 PPT 下载 URL                                         |
 | -2     | ppt 打开过程中发生未知错误            | 请检查 PPT 格式是否正确                                    |
-| -3     | ppt 打开超时                           | 请检查 PPT 格式是否正确                                    |
-| -4     | ppt 打开无响应                        | 请检查 PPT 格式是否正确                                    |
+| -3     | ppt 打开超时                           | 请检查 PPT 格式是否正确或重试                                    |
+| -4     | ppt 打开无响应                        | 请检查 PPT 格式是否正确或重试                                    |
 | -5     | ppt 文件被加密                        | 不支持转换已加密的 PPT                                    |
 | -6     | 未知 ppt 格式                           | 请检查 PPT 格式是否正确                                    |
 | -7     | ppt 打开时发生异常                    | 请检查 PPT 格式是否正确                                    |
@@ -375,9 +375,9 @@ Body 参数（JSON 格式）
 | -13    | ppt 转换服务未加载                    | 请联系客服人员                                           |
 | -14    | ppt 转码过程中，发生错误              | 请根据错误信息中的页数,检查该页中的 元素 或 动画组合 是否正确;</br>如果错误信息中，无具体页数"unknown page"，则代表无法获取某一页转换失败，该ppt不支持转换|
 | -15    | ppt 转码文件生成失败                  | 请联系客服人员或重试                                     |
-| -16    | ppt 转换模式异常                      | PPT 格式不支持或联系客服人员                              |
+| -16    | ppt 转换模式异常                      | PPT 格式不支持或联系维护人员                              |
 | -17    | ppt 超过最大的转换页数限制（目前为500） | 不支持转换超过500页的 PPT                                 |
-| -18    | ppt 转换失败，错误未知                | ppt 格式不支持或联系客服人员                              |
+| -18    | ppt 转换失败，错误未知                | ppt 格式不支持或联系维护人员                              |
 | -19    | ppt 被加密                            | 不支持加密的 PPT                                          |
 | -20    | ppt 未知属性错误                      | 请检查 PPT 格式是否正确                                    |
 | -21    | ppt 检测属性超时                      | 请检查 PPT 格式是否正确                                    |
