--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -413,6 +413,10 @@ Body 参数（JSON 格式）
 | -123  | cos 转码写本地文件失败                     | 请联系维护人员 或 重试   |
 | -124  | cos 转码文件内容为空                     | 请联系维护人员 或 重试   |
 | -125  | cos 转码获取分辨率失败                     | 请联系维护人员 或 重试   |
+| -126  | pdf打开失败                     | pdf文件格式错误或pdf加密，不支持转码   |
+| -127  | pdf 文件加密                     | 不支持加密pdf文件转码   |
+| -128  | 获取pdf页数失败                     | pdf文件格式不支持   |
+| -129  | pdf 转码未知错误                     | pdf文件格式不支持   |
 | -3001 | 转换失败或者任务创建失败.          | 文件格式不支持             |
 | -3002 | 服务器过载，转换队列过长           | 请稍后重试转码             |
 | -3003 | 转换超时                        | 文件格式不支持             |
