--- a/PaaS/Docs/实时录制.md
+++ b/PaaS/Docs/实时录制.md
@@ -140,6 +140,9 @@ VideoInfo 对象格式
 此 JSON 串表示课堂录制产生了6个视频文件，其中，在过程中暂停录制了1分钟，之后恢复录制，因此最后产生了6段视频，这6个视频文件在时间轴上的排列如下图所示：
 ![](https://main.qcloudimg.com/raw/3349c4e84013de4245b54bc3bf79dc91/%E5%AE%9E%E6%97%B6%E5%BD%95%E5%88%B6%E7%BB%93%E6%9E%9C%E7%A4%BA%E4%BE%8B.png)
 
+> 注意：
+> **实时录制结果文件只保存3天，3天后将被删除，建议获取到录制结果后对录制文件进行转存。**
+
 ## 接口鉴权
 
 所有请求调用都需要带上签名以便服务器鉴权，签名算法如下：
