--- a/PaaS/Docs/课后录制.md
+++ b/PaaS/Docs/课后录制.md
@@ -576,3 +576,10 @@ VideoInfo对象格式
 | 20010 | 同一个房间的录制任务已经添加并且未结束 | 确认查询之前上一个课后录制任务的录制结果，或等待上个任务结束后再重新发起 |
 | 20099 | 内部错误                          | 请联系客服人员                                                  |
 
+## 使用限制
+
+课后录制原理是，将上课过程中的白板消息进行重新播放一遍，并录制成白板视频,然后和点播录制的摄像头视频、屏幕分享视频一起下发给客户后台；当然，如果发起录制时，设置了混流，下发结果前，会将各个视频文件混流成一个文件；所以，使用上会有一些限制，如下，
+
+- 由于课后录制是对课堂的白板消息进行重新播放一遍，录制耗时会比较长，所以，现在推荐使用实时录制；如果线上课堂，实时录制出现异常，且不可恢复，可以使用课后录制作为补救方式；
+- 由于课后录制是对课堂的白板消息进行重新播放一遍，并录制成视频文件，所以，必须在下课后才能发起录制，是从第一次白板操作开始录制，到最后一次白板操作结束；如果在课中发起录制，可能导致录制的白板不全，或者没有摄像头视频\屏幕分享视频文件;
+- 白板消息在录制后台只保留7天，所以，只能在课堂结束后的7天内发起录制；
