补充addTranscodeFile接口说明

--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -682,19 +682,29 @@ var fid = teduBoard.addTranscodeFile(file)
 
 | 参数 | 类型   | 是否必填 | 说明    |
 | ---- | ------ | -------- | ------- |
-| file.title  | String | 是       | 文件名 |
-| file.resolution  | String | 是       | 文件的分辨率 |
-| file.url  | String | 是       | 转码后的url |
-| file.pages  | Number | 是       | 文件总页数 |
+| file.title  | String | 是       | 文件名，对应转码结果title字段 |
+| file.resolution  | String | 是       | 文件的分辨率，对应转码结果resolution字段 |
+| file.url  | String | 是       | 转码后的url，对应转码结果result_url字段 |
+| file.pages  | Number | 是       | 文件总页数，对应转码结果pages字段 |
 
 | 返回值   | 类型   | 说明     |
 | -------- | ------ | -------- |
 | fid | String | 文件id |
 
+
 ```
+// 示例一
+teduBoard.addTranscodeFile({
+  title: 'test.pdf',   // 文件名
+  resolution: "793x1122",  // 文件的分辨率
+  url: 'https://transcode-result-1259648581.file.myqcloud.com/003steuic6b26cu47olb/', // 转码后的url
+  pages: 5 // 文件总页数
+})
+
+// 示例二
 teduBoard.addTranscodeFile({
   title: 'test.ppt',   // 文件名
-  resolution: "1024x768",  // 文件的宽高比
+  resolution: "1024x768",  // 文件的分辨率
   url: 'https://test04-1257240443.cos.ap-shanghai.myqcloud.com/0o5stagbd6b264ei59jb/index.html', // 转码后的url
   pages: 21 // 文件总页数
 })
