更新web端和小程序端文档

--- a/PaaS/Docs/SDK文档/Web/互动课堂接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动课堂接入文档.md
@@ -12,9 +12,9 @@
 <!-- COS SDK -->
 <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/cos/5.1.0/cos.min.js"></script>
 <!-- 白板SDK -->
-<script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.3/TEduBoard.min.js"></script>
+<script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.4/TEduBoard.min.js"></script>
 <!-- TIC SDK -->
-<script src="https://tic-res-1259648581.file.myqcloud.com/tic/2.3.0/TIC.min.js"></script>
+<script src="https://tic-res-1259648581.file.myqcloud.com/tic/2.3.2/TIC.min.js"></script>
 ```
 
 > 其中 TIC.min.js 可根据开源源码自行编译。
@@ -163,15 +163,28 @@ callback | Function | 是 | 回调
 ### 加入课堂
 
 ```
-tic.joinClassroom(classId, webrtcOption, boardOption, callback);
+tic.joinClassroom(classOption, webrtcOption, boardOption, callback);
 ```
 
 参数 | 类型 | 必填 | 说明
 --------- | --------- | -----| ---
-classId | Number | 是 | 由业务方下发，并保证每次下发的 classId 是唯一不重复的
-webrtcOption | Number | 是 | webrtcOption 参数
-boardOption | Number | 是 | boardOption 参数
+classOption | Number/Object | 是 | 
+webrtcOption | Object | 是 | webrtcOption 参数
+boardOption | Object | 是 | boardOption 参数
 callback | Function | 是 | 回调
+
+- classOption 参数：
+  - 为Object类型：
+    | 参数    | 类型    | 必填 | 说明|
+    |--------- | --------- | ----- | --------- |
+    | classId | Number | 是 | 由业务方下发，并保证每次下发的 classId 是唯一不重复的 |
+    | compatSaas | Boolean | 否 | 是否需要与SaaS互通 |
+
+  - 为Number类型：
+    | 参数    | 类型    | 必填 | 说明|
+    |--------- | --------- | ----- | --------- |
+    | classOption | Number | 是 | 由业务方下发，并保证每次下发的 classId 是唯一不重复的 |
+
 
 - webrtcOption 参数：
 
