[实时录制]teacher_id类型修正

--- a/PaaS/Docs/实时录制.md
+++ b/PaaS/Docs/实时录制.md
@@ -243,7 +243,7 @@ MixStream 参数
 | enabled | bool | 是否开启混流 | 是 |
 | disable_audio | bool | 是否禁用音频混流 | 否 |
 | model_id | int | 内置混流布局模板ID, 取值 [1, 2], 区别见内置混流布局模板样式示例说明 <br> 在没有填custom字段时候，model_id是必填的 | 否 |
-| teacher_id | int | 老师用户ID <br> 此字段只有在model_id填了的情况下生效 <br> 填写teacher_id的效果是把指定为teacher_id的用户视频流显示在内置模板的第一个小画面中 | 否 |
+| teacher_id | string | 老师用户ID <br> 此字段只有在model_id填了的情况下生效 <br> 填写teacher_id的效果是把指定为teacher_id的用户视频流显示在内置模板的第一个小画面中 | 否 |
 | custom | CustomLayout | 自定义混流布局参数 <br> 当此字段存在时，model_id 及 teacher_id 字段将被忽略 | 否 |
 
 CustomLayout 参数 
