方案简介新增：下载说明

--- a/PaaS/Docs/课后录制.md
+++ b/PaaS/Docs/课后录制.md
@@ -10,6 +10,9 @@
 
 若您没有开通课后录制服务，请按照 [购买指南](../../购买指南.md) 购买相应的服务后发送邮件申请开通，并按照文档流程开启实时音视频云端录制以及提供 App 管理员的`UserId`和`UserSig`。
 
+> 注意：实时音视频云端录制和白板课后录制是两个独立的录制模块，白板课后录制结束后将透传实时音视频云端录制文件的下载地址。
+
+
 ### 发起课后录制
 
 在课堂结束后，您的业务服务器可以发起一个对该课堂的课后录制请求，具体的鉴权以及请求方式请参考 [发起课后录制](#jump)。发起请求后，课后录制服务返回一个本次录制任务 ID 即`task_id`，后续查询录制进度需要依赖于这个`task_id`，请妥善保存。
