[实时录制]从文档中去掉屏幕分享相关说明

--- a/PaaS/Docs/实时录制.md
+++ b/PaaS/Docs/实时录制.md
@@ -61,8 +61,8 @@ VideoInfo 对象格式
 | video_duration  | int    | 视频播放时长（单位：毫秒）                                  |
 | video_url       | string | 视频文件 url                                                |
 | video_id        | string | 点播后台返回的视频 fileId                                     |
-| video_type      | int    | 视频流类型 0：摄像头视频 1：屏幕分享视频 2：白板视频 3：混流视频      |
-| user_id         | string | 摄像头/屏幕分享视频所属用户的 ID <br> 特别说明：<br> 1. 白板视频的 user_id 为空 <br> 2. 混流视频的 user_id 命名格式为 tic_mixstream_{room_id}_{model_id}，其中 room_id 为录制房间号， model_id 为混流布局模板号，如果是自定义布局，则 model_id 固定为 "custom" |
+| video_type      | int    | 视频流类型 0：摄像头视频 2：白板视频 3：混流视频      |
+| user_id         | string | 摄像头视频所属用户的 ID <br> 特别说明：<br> 1. 白板视频的 user_id 为空 <br> 2. 混流视频的 user_id 命名格式为 tic_mixstream_{room_id}_{model_id}，其中 room_id 为录制房间号， model_id 为混流布局模板号，如果是自定义布局，则 model_id 固定为 "custom" |
 
 以下为一个录制结果 JSON 串示例：
 
@@ -659,8 +659,8 @@ VideoInfo 对象格式
 | video_duration  | int    | 视频播放时长（单位：毫秒）                                  |
 | video_url       | string | 视频文件 url                                                |
 | video_id        | string | 点播后台返回的视频 fileId                                     |
-| video_type      | int    | 视频流类型 0：摄像头视频 1：屏幕分享视频 2：白板视频 3：混流视频      |
-| user_id         | string | 摄像头/屏幕分享视频所属用户的 ID（白板视频与混流视频 user_id 为空）    |
+| video_type      | int    | 视频流类型 0：摄像头视频 2：白板视频 3：混流视频      |
+| user_id         | string | 摄像头视频所属用户的 ID（白板视频与混流视频 user_id 为空）    |
 
 OmittedDuration对象格式
 
@@ -872,8 +872,8 @@ VideoInfo 对象格式
 | video_duration  | int    | 视频播放时长（单位：毫秒）                                 |
 | video_url       | string | 视频文件 url                                                |
 | video_id        | string | 点播后台返回的视频 fileId                                     |
-| video_type      | int    | 视频流类型 0：摄像头视频 1：屏幕分享视频 2：白板视频 3：混流视频      |
-| user_id         | string | 摄像头/屏幕分享视频所属用户的 ID（白板视频与混流视频 user_id 为空）    |
+| video_type      | int    | 视频流类型 0：摄像头视频 2：白板视频 3：混流视频      |
+| user_id         | string | 摄像头视频所属用户的 ID（白板视频与混流视频 user_id 为空）    |
 
 OmittedDuration对象格式
 
