修改文档错误格式

--- a/PaaS/Docs/SDK文档/Web/互动课堂接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动课堂接入文档.md
@@ -126,9 +126,15 @@ tic.createClassroom(classOption, callback);
 参数 | 类型 | 必填 | 说明
 --------- | --------- | -----| ---
 classOption | Object | 是 | 课堂配置
-- classOption.classId | Number | 是 | 课堂ID
-- classOption.classScene | Number | 否，默认TIC.CONSTANT.TICClassScene.TIC_CLASS_SCENE_VIDEO_CALL | TIC.CONSTANT.TICClassScene.TIC_CLASS_SCENE_VIDEO_CALL ：实时通话模式，支持1000人以下场景，低延时 <br/> TIC.CONSTANT.TICClassScene.TIC_CLASS_SCENE_VIDEO_CALL ：直播模式，支持1000人以上场景，会增加600ms左右延时
 callback | Function | 是 | 回调
+
+
+- classOption 参数：
+
+| 参数    | 类型    | 必填 | 说明|
+|--------- | --------- | ----- | --------- |
+| classId | Number | 是 | 课堂ID
+| classScene | Number | 否，默认TIC.CONSTANT.TICClassScene.TIC_CLASS_SCENE_VIDEO_CALL |TIC.CONSTANT.TICClassScene.TIC_CLASS_SCENE_VIDEO_CALL ：实时通话模式，支持1000人以下场景，低延时 <br/> TIC.CONSTANT.TICClassScene.TIC_CLASS_SCENE_LIVE ：直播模式，支持1000人以上场景，会增加600ms左右延时 |
 
 
 - callback 回调参数：
@@ -175,15 +181,17 @@ callback | Function | 是 | 回调
 
 - classOption 参数：
   - 为Object类型：
-    | 参数    | 类型    | 必填 | 说明|
-    |--------- | --------- | ----- | --------- |
-    | classId | Number | 是 | 由业务方下发，并保证每次下发的 classId 是唯一不重复的 |
-    | compatSaas | Boolean | 否 | 是否需要与SaaS互通 |
+
+| 参数    | 类型    | 必填 | 说明|
+|--------- | --------- | ----- | --------- |
+| classId | Number | 是 | 由业务方下发，并保证每次下发的 classId 是唯一不重复的 |
+| compatSaas | Boolean | 否 | 是否需要与SaaS互通 |
 
   - 为Number类型：
-    | 参数    | 类型    | 必填 | 说明|
-    |--------- | --------- | ----- | --------- |
-    | classOption | Number | 是 | 由业务方下发，并保证每次下发的 classId 是唯一不重复的 |
+
+| 参数    | 类型    | 必填 | 说明|
+|--------- | --------- | ----- | --------- |
+| classOption | Number | 是 | 由业务方下发，并保证每次下发的 classId 是唯一不重复的 |
 
 
 - webrtcOption 参数：
