1，添加 -20 错误码的解决方法 2，添加“只读”，“加密”文件的要求

--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -453,13 +453,14 @@ Body 参数（JSON 格式）
 ## ppt 演示文稿课件格式建议
 
 1. 建议使用 Microsoft Office 2007或以上版本（wps 和 keynote 都有一定的兼容性问题）。
-2. 请勿使用不支持的四种 ppt 动效，包括：1：“Bold Flash”、2：“Underline”、3：“Grow With Color”、4：“Bold Reveal”。
-3. 请勿插入 flash 动画，不支持 flash 动画播放。
-4. 如果使用 wps，请注意不支持 WPS ppt 中的音视频元素。
-5. 如果使用 keynote，请注意插入的音频播放标签，无法展示。
-6. 建议使用操作系统默认的中英文字体，请勿使用自己安装的字体，否则可能会出现转码失败或者转码 h5 格式异常 [查看转码服务器支持字体](./SDK文档/PPT转h5支持字体列表.md)。
-7. ppt 页数不要过多，页数越多，转换速度越慢（目前最大支持500页转码）。
-8. ppt 中如果带有音视频，体积尽量小，否则会影响转换速度和转换后的 h5 加载速度。
+2. ppt转码文件必须是 可编辑 的；不支持“只读”、“加密”、或其他保护，导致ppt无法编辑的文件转码
+3. 请勿使用不支持的四种 ppt 动效，包括：1：“Bold Flash”、2：“Underline”、3：“Grow With Color”、4：“Bold Reveal”。
+4. 请勿插入 flash 动画，不支持 flash 动画播放。
+5. 如果使用 wps，请注意不支持 WPS ppt 中的音视频元素。
+6. 如果使用 keynote，请注意插入的音频播放标签，无法展示。
+7. 建议使用操作系统默认的中英文字体，请勿使用自己安装的字体，否则可能会出现转码失败或者转码 h5 格式异常 [查看转码服务器支持字体](./SDK文档/PPT转h5支持字体列表.md)。
+8. ppt 页数不要过多，页数越多，转换速度越慢（目前最大支持500页转码）。
+9. ppt 中如果带有音视频，体积尽量小，否则会影响转换速度和转换后的 h5 加载速度。
 
 ## 常见问题
 1. ppt 转 h5后，出现某些字体错位，或大小不一致，如何处理？  
@@ -487,3 +488,8 @@ ppt 保存时，将字体库一起打包进 ppt。
 5. 为什么会遇到"-9 ppt transform failed! Ppt Format not support!"错误呢？应该如何解决？
 问题原因：ppt 中，可能含有某些元素，导致转换成 pptx 失败
 解决方法：将ppt用PowerPoint手动转为pptx,确认打开pptx不会有任何报错后，在使用转换后的pptx重新发起转码
+6. 为什么会遇到"-20 UnKnow Ppt property! Ppt Format not support!"错误呢？应该如何解决？
+问题原因：1，ppt 文件，可能是“只读”、“加密”、或其他保护，导致ppt无法被编辑
+2，ppt文件，可能含有不支持的转码属性
+解决方法：如果ppt不支持编辑：修改ppt为可编辑，然后再次尝试转码
+如果含有不支持的属性：PowerPoint打开ppt，修改PowerPoint提示的异常属性，然后再次尝试转码
