优化文档转码结果描述

--- a/PaaS/Docs/文档转码.md
+++ b/PaaS/Docs/文档转码.md
@@ -181,17 +181,17 @@ Body 参数（JSON 格式）
 
 返回参数（JSON 格式）
 
-| 参数名      | 类型    | 描述                     |
-|:-----------|:-------|:------------------------|
-| error_code | int    | 错误码                   |
-| error_msg  | string | 错误信息                 |
-| task_id    | string | 任务的唯一标识 ID          |
-| status     | string | 任务状态                 |
-| progress   | int    | 0-100的整数表示转码当前进度 |
-| result_url | string | 转码完成后结果 URL         |
-| resolution | string | 文档的分辨率              |
-| pages      | int    | 文档的总页数                 |
-| title      | string | 文档的文件名              |
+| 参数名      | 类型   | 描述                                                                                                                            |
+|:-----------|:-------|:--------------------------------------------------------------------------------------------------------------------------------|
+| error_code | int    | 错误码                                                                                                                           |
+| error_msg  | string | 错误信息                                                                                                                         |
+| task_id    | string | 任务的唯一标识 ID                                                                                                                 |
+| status     | string | 任务状态                                                                                                                         |
+| progress   | int    | 0-100的整数表示转码当前进度                                                                                                        |
+| result_url | string | 转码结果，如果是PPT动态转码结果为H5页面URL，如果是静态转码结果为转码后静态图片的文件路径，请将此结果配合白板SDK的`addTranscodeFile`接口使用, 有效期3个月 |
+| resolution | string | 文档的分辨率                                                                                                                      |
+| pages      | int    | 文档的总页数                                                                                                                      |
+| title      | string | 文档的文件名                                                                                                                      |
 
 返回示例：
 
@@ -308,19 +308,19 @@ URL 参数
 
 Body 参数（JSON 格式）
 
-| 参数名       | 类型    | 描述                           |
-|:------------|:-------|:------------------------------|
-| error_code  | int    | 错误码                         |
-| error_msg   | string | 错误信息                       |
-| timestamp   | int    | 回调发送的时间戳                 |
-| task_id     | string | 任务的唯一标识 ID                |
-| task_type   | string | 文档转码任务类型固定为`transcode` |
-| status      | string | 任务状态                       |
-| progress    | int    | 0-100的整数表示转码当前进度       |
-| result_url  | string | 转码完成后结果 URL, 有效期3个月   |
-| resolution  | string | 文档的分辨率                    |
-| title       | string | 文档的文件名                    |
-| pages       | int    | 文档的总页数                    |
+| 参数名      | 类型   | 描述                            |
+|:-----------|:-------|:--------------------------------|
+| error_code | int    | 错误码                           |
+| error_msg  | string | 错误信息                         |
+| timestamp  | int    | 回调发送的时间戳                  |
+| task_id    | string | 任务的唯一标识 ID                 |
+| task_type  | string | 文档转码任务类型固定为`transcode`  |
+| status     | string | 任务状态                         |
+| progress   | int    | 0-100的整数表示转码当前进度        |
+| result_url | string | 转码结果，如果是PPT动态转码结果为H5页面URL，如果是静态转码结果为转码后静态图片的文件路径，请将此结果配合白板SDK的`addTranscodeFile`接口使用, 有效期3个月 |
+| resolution | string | 文档的分辨率                      |
+| title      | string | 文档的文件名                      |
+| pages      | int    | 文档的总页数                      |
 
 回调示例：
 
