课后录制文档

--- a/PaaS/Docs/课后录制.md
+++ b/PaaS/Docs/课后录制.md
@@ -34,7 +34,7 @@
 | group_id          | string      | 白板的群组 ID                                               |
 | record_start_time | int         | 录制视频开始时 IM 服务器的 Unix 时间戳，可用于视频与 IM 消息对齐，单位秒 |
 | total_time        | int         | 回放视频总时长（单位：毫秒）                                  |
-| video_info        | []VideoInfo | 录制视频列表                                               |
+| video_info        | VideoInfo[] | 录制视频列表                                               |
 
 VideoInfo 对象格式
 
@@ -311,7 +311,7 @@ Body 参数（JSON 格式）
 | group_id          | string      | 白板的群组 ID                                                 |
 | record_start_time | int         | 录制视频开始时 IM 服务器的 Unix 时间戳，可用于视频与 IM 消息对齐，单位秒 |
 | total_time        | int         | 回放视频总时长（单位：毫秒）                                     |
-| video_info        | []VideoInfo | 录制视频列表                                                 |
+| video_info        | VideoInfo[] | 录制视频列表                                                 |
 
 VideoInfo 对象格式
 
@@ -481,7 +481,7 @@ Body 参数（JSON 格式）
 | group_id          | string      | 白板的群组 ID                                                 |
 | record_start_time | int         | 录制视频开始时 IM 服务器的 Unix 时间戳，可用于视频与 IM 消息对齐，单位秒 |
 | total_time        | int         | 回放视频总时长（单位：毫秒）                                  |
-| video_info        | []VideoInfo | 录制视频列表                                                 |
+| video_info        | VideoInfo[] | 录制视频列表                                                 |
 
 VideoInfo对象格式
 
