合并官网文档

--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -79,7 +79,7 @@
 
 ## 实例化白板
 
-> 如果您集成的是 TIC，则可忽略实例化这一步，在 TIC 中已经对白板进行实例化，可获取白板实例后，调用白板接口进行操作。
+>?如果您集成的是 TIC，则可忽略实例化这一步，在 TIC 中已经对白板进行实例化，可获取白板实例后，调用白板接口进行操作。
 
 ```
 var teduBoard = new TEduBoard(options);
@@ -113,12 +113,12 @@ var teduBoard = new TEduBoard(options);
 
 该方法需传入 userId（即 uid）和 userSig 参数，uid 为用户 ID，userSig 为腾讯云后台用来鉴权的用户签名，相当于登录 TICSDK 的用户密码，需要在开发者服务器依照腾讯云生成 userSig 的规则来生成，并下发给 Web 端。
 
-> 开发调试阶段，用户可在腾讯云控制台使用开发辅助工具，生成临时的 uid 和 userSig 用于开发测试，详情请参见 [生成签名](https://cloud.tencent.com/document/product/647/17275)。
+>?开发调试阶段，用户可在腾讯云控制台使用开发辅助工具，生成临时的 uid 和 userSig 用于开发测试，详情请参见 [生成签名](https://cloud.tencent.com/document/product/647/17275)。
 
 
 ## 白板 SDK 接口
 
-#### 获取白板SDK的版本号
+#### 获取白板 SDK 的版本号
 
 ```
 var version = teduBoard.getVersion()
@@ -128,7 +128,7 @@ var version = teduBoard.getVersion()
 | -- | --------- | ------------------ |
 |   version | String    | 返回白板的版本 |
 
-#### 3.2 增加一页白板
+#### 增加一页白板
 
 ```
 var boardId = teduBoard.addBoard(url)
@@ -136,12 +136,12 @@ var boardId = teduBoard.addBoard(url)
 
 | 参数    |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
-| url |   String   | 否 | 指定白板是否需要设置背景图片，要使用的背景图片URL，为空字符串表示不指定背景图片 |
+| url |   String   | 否 | 指定白板是否需要设置背景图片，要使用的背景图片 URL，为空字符串表示不指定背景图片 |
 
 
 |  返回值  | 类型       | 说明 |
 | --------- | --------- | ------------------ |
-|   boardId | String | 返回新增白板的ID |
+|   boardId | String | 返回新增白板的 ID |
 
 
 
@@ -157,7 +157,7 @@ var version = teduBoard.deleteBoard(boardId)
 
 #### 上一步动画
 
-> 每个Step对应PPT的一个动画效果，若当前没有已展示的动画效果，则该接口调用会导致向前翻页
+每个 Step 对应 PPT 的一个动画效果，若当前没有已展示的动画效果，则该接口调用会导致向前翻页。
 
 ```
 teduBoard.prevStep()
@@ -165,7 +165,7 @@ teduBoard.prevStep()
 
 #### 下一步动画
 
-> 每个Step对应PPT的一个动画效果，若当前没有未展示的动画效果，则该接口调用会导致向后翻页
+每个 Step 对应 PPT 的一个动画效果，若当前没有未展示的动画效果，则该接口调用会导致向后翻页。
 
 ```
 teduBoard.nextStep()
@@ -173,7 +173,7 @@ teduBoard.nextStep()
 
 #### 向前翻页
 
-> 若当前白板页为当前文件的第一页，则该接口调用无效
+若当前白板页为当前文件的第一页，则该接口调用无效。
 
 ```
 teduBoard.prevBoard(resetStep)
@@ -181,11 +181,11 @@ teduBoard.prevBoard(resetStep)
 
 | 参数 |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
-| resetStep |  Boolean | 否 | PPT动画是否需要重置当前页动画步数，默认false |
+| resetStep |  Boolean | 否 | PPT 动画是否需要重置当前页动画步数，默认 false |
 
 #### 向后翻页
 
-> 若当前白板页为当前文件的最后一页，则该接口调用无效
+若当前白板页为当前文件的最后一页，则该接口调用无效。
 
 ```
 teduBoard.nextBoard(resetStep)
@@ -193,7 +193,7 @@ teduBoard.nextBoard(resetStep)
 
 | 参数 |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
-| resetStep |  Boolean | 否 | PPT动画是否需要重置当前页动画步数，默认false |
+| resetStep |  Boolean | 否 | PPT 动画是否需要重置当前页动画步数，默认 false |
 
 #### 跳转到指定白板页
 
@@ -203,8 +203,8 @@ teduBoard.gotoBoard(boardId, resetStep)
 
 | 参数 |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
-| boarId |   String | 是 | 要跳转到的白板页ID |
-| resetStep |  Boolean | 否 | PPT动画是否需要重置当前页动画步数，默认false |
+| boarId |   String | 是 | 要跳转到的白板页 ID |
+| resetStep |  Boolean | 否 | PPT 动画是否需要重置当前页动画步数，默认 false |
 
 
 #### 获取当前白板页
@@ -215,7 +215,7 @@ return boardId = teduBoard.getCurrentBoard()
 
 |  返回值  | 类型       | 说明 |
 | --------- | --------- | ------------------ |
-|   boardId | String | 获取当前白板页ID |
+|   boardId | String | 获取当前白板页 ID |
 
 
 #### 获取所有文件的白板列表
@@ -237,7 +237,7 @@ teduBoard.deleteFile(fid)
 
 | 参数 |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
-| fid |   String | 是 | 要删除的文件ID， 文件ID为空字符串时表示当前文件，默认文件无法删除 |
+| fid |   String | 是 | 要删除的文件 ID，文件 ID 为空字符串时表示当前文件，默认文件无法删除 |
 
 
 #### 切换文件
@@ -248,10 +248,10 @@ teduBoard.switchFile(fid)
 
 | 参数 |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
-| fid |   String | 是 | 要切换到的文件ID， 文件ID为必填项，为空字符串将导致文件切换失败 |
+| fid |   String | 是 | 要切换到的文件 ID，文件 ID 为必填项，为空字符串将导致文件切换失败 |
 
 
-#### 获取当前文件ID
+#### 获取当前文件 ID
 
 ```
 var fid = teduBoard.getCurrentFile()
@@ -259,7 +259,7 @@ var fid = teduBoard.getCurrentFile()
 
 |  返回值  | 类型       | 说明 |
 | --------- | --------- | ------------------ |
-|   fid | String | 获取当前文件ID |
+|   fid | String | 获取当前文件 ID |
 
 
 #### 获取白板中上传的所有文件的文件信息列表
@@ -274,7 +274,7 @@ var fileInfo = teduBoard.getFileInfoList()
 |   fileInfo | Array | 文件信息列表 |
 
 
-#### 获取指定文件的白板ID列表
+#### 获取指定文件的白板 ID 列表
 
 ```
 var boards = teduBoard.getFileBoardList(fid)
@@ -282,7 +282,7 @@ var boards = teduBoard.getFileBoardList(fid)
 
 | 参数 |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
-| fid |   String | 是 | 文件ID |
+| fid |   String | 是 | 文件 ID |
 
 |  返回值  | 类型       | 说明 |
 | --------- | --------- | ------------------ |
@@ -297,12 +297,12 @@ teduBoard.clearFileDraws(fid)
 
 | 参数 |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
-| fid |   String | 是 | 文件ID |
+| fid |   String | 是 | 文件 ID |
 
 
 #### 添加白板同步数据
 
-> 该接口用于多个白板间的数据同步，使用内置IM作为信令通道时，不需要调用该接口
+该接口用于多个白板间的数据同步，使用内置 IM 作为信令通道时，不需要调用该接口。
 
 ```
 teduBoard.addSyncData(data)
@@ -498,9 +498,9 @@ teduBoard.setBackgroundImage(url, mode)
 | url  | String | 是   | 图片的 URL 地址                                              |
 | mode | Number | 否   | 默认值：0<br/> 0：以宽度或者高度为基准居中对齐等比例放大<br/> 1：保留字段<br/> 2：保留字段<br/> 3：保留字段<br/> 4：以宽度或者高度为基准居左对齐等比例放大 <br/> 5：以宽度或者高度为基准居顶对齐等比例放大<br/> 6：以宽度或者高度为基准居右对齐等比例放大<br/> 7：以宽度或者高度为基准居底对齐等比例放大 |
 
-> 该接口与 setBackgroundH5 互斥
+该接口与 setBackgroundH5 互斥。
 
-> 当以宽度基准等比例放大，则居左和居右同居中对齐效果一致；当以高度基准等比例放大，则居顶和居底同居中对齐效果一致。
+当以宽度基准等比例放大，则居左和居右同居中对齐效果一致；当以高度基准等比例放大，则居顶和居底同居中对齐效果一致。
 
 #### 设置当前页的 H5 背景
 
@@ -512,7 +512,7 @@ teduBoard.setBackgroundH5(url)
 | ---- | ------ | ---- | ------------- |
 | url  | String | 是   | H5的 URL 地址 |
 
-> 该接口与 setBackgroundImage 互斥，宽高与白板一致，不支持与 H5 页面交互。
+该接口与 setBackgroundImage 互斥，宽高与白板一致，不支持与 H5 页面交互。
 
 #### 撤销当前白板页上一次动作
 
@@ -541,7 +541,7 @@ teduBoard.clear(clearBackground)
 ```
 teduBoard.resize()
 ```
-> 适用场景：在使用白板过程中，如需要动态修改白板的宽高，可以通过修改白板外部容器节点的宽高，然后调用resize方法，白板会重新计算宽高，并重绘。
+适用场景：在使用白板过程中，如需要动态修改白板的宽高，可以通过修改白板外部容器节点的宽高，然后调用 resize 方法，白板会重新计算宽高，并重绘。
 
 
 #### 重置白板数据
@@ -549,7 +549,7 @@ teduBoard.resize()
 ```
 teduBoard.reset()
 ```
-> 调用该接口后将会删除所有的白板页和文件
+调用该接口后将会删除所有的白板页和文件。
 
 
 #### 设置文本样式
@@ -789,14 +789,13 @@ teduBoard.on('事件名'，回调函数);
 ```
 var teduBoard = new TEduBoard(options);
 teduBoard.on(BoardSDK.CONSTANT.EVENT.HISTROY_DATA_COMPLETE, res => {
-// 业务侧逻辑
+  // 业务侧逻辑
 });
 ```
 
-
 #### 注销事件监听
 
-> 如果不指定注销事件名，则全部绑定事件都注销
+如果不指定注销事件名，则全部绑定事件都注销。
 
 ```
 teduBoard.off('事件名');
@@ -826,7 +825,7 @@ boardSdk.off();
 
 #### TEduBoard.EVENT.TEB_OPERATE_CANREDO_STATUS_CHANGED
 
-重做状态改变。
+ 重做状态改变。
 
 | 回调参数 | 类型    | 说明         |
 | -------- | ------- | ------------ |
@@ -834,7 +833,7 @@ boardSdk.off();
 
 #### TEduBoard.EVENT.TEB_OPERATE_CANUNDO_STATUS_CHANGED
 
-撤销状态改变。
+ 撤销状态改变。
 
 | 回调参数 | 类型    | 说明         |
 | -------- | ------- | ------------ |
@@ -868,7 +867,7 @@ boardSdk.off();
 
 | 回调参数 | 类型   | 说明                                                         |
 | -------- | ------ | ------------------------------------------------------------ |
-| code     | Number | 警告回调类型 <br> 1：接收到其他端的同步数据解析错误 <br> 3：上传的文件已经存在，不能重复上传 <br> 5：历史数据同步完成前，禁止操作白板 |
+| code     | Number | 警告回调类型 <br> 1：接收到其他端的同步数据解析错误 <br> 2：上传的文件已经存在，不能重复上传 |
 | msg      | String | 错误信息                                                     |
 
 #### TEduBoard.EVENT.TEB_IMAGE_STATUS_CHANGED
@@ -894,7 +893,7 @@ boardSdk.off();
 
 #### TEduBoard.EVENT.TEB_GOTOBOARD
 
-跳转白板页回调。
+ 跳转白板页回调。
 
 | 回调参数 | 类型   | 说明          |
 | -------- | ------ | ------------- |
@@ -961,7 +960,7 @@ boardSdk.off();
 
 #### TEduBoard.EVENT.TEB_FILEUPLOADPROGRESS
 
-上传文件进度回调。
+ 上传文件进度回调。
 
 | 回调参数        | 类型   | 说明                                                   |
 | --------------- | ------ | ------------------------------------------------------ |
