--- a/PaaS/Docs/SDK文档/Windows/互动课堂接入文档.md
+++ b/PaaS/Docs/SDK文档/Windows/互动课堂接入文档.md
@@ -14,7 +14,7 @@
 | HttpClient.cpp | HTTP 请求工具类 | TIC/Windows/SDK/TIC/HttpClient.cpp |
 | NTP.h | NTP 协议请求对时工具类 | TIC/Windows/SDK/TIC/NTP.h |
 | NTP.cpp | NTP 协议请求对时工具类 | TIC/Windows/SDK/TIC/NTP.cpp |
-| jsoncpp | jsoncpp开源库 | TIC/Windows/SDK/TIC/jsoncpp |
+| jsoncpp | jsoncpp 开源库 | TIC/Windows/SDK/TIC/jsoncpp |
 
 
 ### 依赖 SDK
@@ -33,7 +33,7 @@
 在`Visual Studio`开发环境下，按如下步骤导入`依赖SDK`以及`TIC源码`，
 
 1. 源码导入
-将`TIC/Windows/SDK/TIC`目录下的`TIC源码`导入到工程；建议在【解决方案资源管理器】中单独为源码建立筛选器，如TIC、TIC\jsoncpp，再将源码导入到对应筛选器下，可参考TIC Demo;
+将`TIC/Windows/SDK/TIC`目录下的`TIC源码`导入到工程；建议在【解决方案资源管理器】中单独为源码建立筛选器，如TIC、TIC\jsoncpp，再将源码导入到对应筛选器下，可参考TIC Demo。
 
 2. 项目配置
 在使用SDK的项目上右键，选择【属性】，对项目属性进行配置；
@@ -320,8 +320,9 @@ trtc->stopLocalAudio();
 
 TIC 进房成功后自动发送课后离线录制需要的对时消息并上报群组 ID，对时消息发送成功您会收到`TICEventListener`的回调`onTICSendOfflineRecordInfo`，只有发送对时信息成功，才能进行课后离线录制。
 
-> 1. demo 对时消息 ntp 时间戳是从腾讯云 ntp 服务获取，您可以选择搭建自己的 ntp 服务器。
-> 2. 由于 IM 群消息有可能大于10000，当 IM 群消息大于10000时，消息会开始丢弃，导致空洞消息。上报群组后，后台判断，当群组中 IM 消息大于10000时，会自动备份群消息到 COS。
+>!
+1. demo 对时消息 ntp 时间戳是从腾讯云 ntp 服务获取，您可以选择搭建自己的 ntp 服务器。
+2. 由于 IM 群消息有可能大于10000，当 IM 群消息大于10000时，消息会开始丢弃，导致空洞消息。上报群组后，后台判断，当群组中 IM 消息大于10000时，会自动备份群消息到 COS。
 
 
 
