--- a/PaaS/Docs/SDK文档/小程序/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/小程序/互动白板接入文档.md
@@ -4,7 +4,7 @@
 
 微信6.6.6版本开始支持。
 
-> 小程序端白板将以组件的方式集成，如果是以 TIC 方式集成，可忽略本步骤。
+>? 小程序端白板将以组件的方式集成，如果是以 TIC 方式集成，可忽略本步骤。
 
 #### 源码简介
 
@@ -36,7 +36,7 @@ constant 常量。
 
 在 [微信公众平台](https://mp.weixin.qq.com/) 登录您小程序的账号和密码，并在【设置】>【开发设置】，配置服务器 request 合法域名。
 
-> 以下域名为互动课堂 SDK 中必须的域名，另外还需要加上您业务服务器的域名。
+>? 以下域名为互动课堂 SDK 中必须的域名，另外还需要加上您业务服务器的域名。
 
 | 域名类型              | 域名                                                    | 说明                          |
 | --------------------- | ------------------------------------------------------- | ----------------------------- |
