--- a/PaaS/Docs/SDK文档/Android/互动课堂接入文档.md
+++ b/PaaS/Docs/SDK文档/Android/互动课堂接入文档.md
@@ -146,7 +146,7 @@ mTicManager.destroyClassroom(mRoomId, new TICManager.TICCallback() {
 ```
 
 #### 加入/退出课堂
-1. 加入课堂通过三步来实现，首先准备课堂参数，包括课堂号、初始化参数（修改白板默认属性）、回调参数接口（用于观察白板的回调）。然后，调用 `joinClassroom`  加入课堂。 最后，通过回调确认是否加入课堂成功。
+1. 加入课堂通过三步来实现，首先准备课堂参数，包括课堂号、初始化参数（修改白板默认属性）、回调参数接口（用于观察白板的回调）。然后，调用 `joinClassroom`  加入课堂。最后，通过回调确认是否加入课堂成功。
 
  ```java
  //1. 进房参数 
@@ -179,7 +179,7 @@ mTicManager.destroyClassroom(mRoomId, new TICManager.TICCallback() {
 ```
 TICClassroomOption 中的 `classId`是课堂 ID，`TICClassroomOption`参数说明如下：
 
- | 参数名 | 参数类型 | 参数说明 |
+| 参数名 | 参数类型 | 参数说明 |
  | ------  |-------|-------|
  | classId | int | 课堂 ID |
  | ntpServer | String | 进行时间校准 server，一般不需要修改 |
@@ -254,7 +254,7 @@ mTrtcCloud.stopLocalPreview();
 ### 使用白板
 1. 白板的创建和初始化及销毁都放置在`TICManager`中，在使用中不需要特别关注，在进房时带上相关参数即可；
 2. 在 onTEBInit() 回调中，通过 mBoard.getBoardView() 获取视图加入显示窗口中；
-3. 通过 getBoardController() 函数获取`BoardController`实例，进行更多的白板操作。比如新建白板、加载 H5PPT 等；
+3. 通过 getBoardController() 函数获取`BoardController`实例，进行更多的白板操作。例如新建白板、加载 H5PPT 等；
 4. 在窗口销毁时，将 BoardView 从显示树中移除。
 
 更多`TEduBoard`相关内容，请参考 [互动白板接入文档](./互动白板接入文档.md)。
@@ -298,14 +298,13 @@ mTicManager.witchRole(TICManager.TICClassScene.TIC_ROLE_TYPE_AUDIENCE);
 
 ### 离线白板录制
 
-
 | 文件名称 | 说明 | 
 |------|-----|
-|TICRecorder.java|录制功能定义| 
-
+| TICRecorder.java | 录制功能定义 | 
 
 TIC 源码进房成功后自动发送离线录制需要的对时消息并上报群组 ID，对时消息发送成功您会收到`TICEventListener`的回调`onTICSendOfflineRecordInfo`。
 
+>!
 1. demo 时间校准消息 ntp 时间戳是从腾讯云 ntp 服务获取，您可以选择搭建自己的 ntp 服务器。
 2. 由于 IM 群消息有可能大于10000，当 IM 群消息大于10000时，消息会开始丢弃，导致空洞消息。上报群组后，后台判断，当群组中 IM 消息大于10000时，会自动备份群消息到 COS。
 
