--- a/PaaS/Docs/SDK文档/iOS/互动课堂接入文档.md
+++ b/PaaS/Docs/SDK文档/iOS/互动课堂接入文档.md
@@ -2,7 +2,7 @@
 ## 开发环境
 
 - Xcode 9.0+
-- OS X 10.10+的Mac真机
+- OS X 10.10+的 Mac 真机
 - 项目已配置有效的开发者签名
 
 ## 文件说明
@@ -79,14 +79,14 @@ pod install
 pod update
 ```
 
-pod命令执行完后，双击打开 .xcworkspace 后缀的工程文件即可编译运行。
+pod 命令执行完后，双击打开 `.xcworkspace` 后缀的工程文件即可编译运行。
 
 
 ### 手动集成
 
 #### 项目配置
 
-在`Xcode`开发环境下，按如下步骤进行工程配置以及导入`依赖SDK`、`TIC源码`：
+在`Xcode`开发环境下，按如下步骤进行工程配置以及导入`依赖 SDK`、`TIC 源码`：
 1. 将`TIC/iOS/SDK/TIC`目录下的`TIC 源码`导入到工程；
 2. 在`General`子配置`Linked Frameworks and Libraries`中加入`TEduBoard.framework`和`TXLiteAVSDK_TRTC.framework`以及公共库`libc++.tbd`和`libresolv.tbd`；
 3. 在`General`子配置`Embedded Binaries`中加入`ImSDK.framework`；
@@ -365,6 +365,7 @@ TRTCCloud *trtc = [[TICManager sharedInstance] getTRTCCloud];
 
 TIC 源码进房成功后自动发送离线录制需要的对时消息并上报群组 ID，对时消息发送成功您会收到`TICEventListener`的回调`onTICSendOfflineRecordInfo`。
 
+>!
 1. demo 对时消息 ntp 时间戳是从腾讯云 ntp 服务获取，您可以选择搭建自己的 ntp 服务器。
 2. 由于 IM 群消息有可能大于10000，当 IM 群消息大于10000时，消息会开始丢弃，导致空洞消息。上报群组后，后台判断，当群组中 IM 消息大于10000时，会自动备份群消息到 COS。
 
