--- a/PaaS/Docs/SDK文档/互动白板接口文档.md
+++ b/PaaS/Docs/SDK文档/互动白板接口文档.md
@@ -278,9 +278,9 @@ void onTEBFileUploadStatus(final String path, int status, String statusMsg);
 **授权参数（TEduBoardAuthParam）**
 ```
 class TEduBoardAuthParam {  
-int sdkAppId;  
-String userId;  
-String userSig;  
+    int sdkAppId;  
+    String userId;  
+    String userSig;  
 }
 ```
 |  成员  | 类型       | 说明 |
@@ -292,10 +292,10 @@ String userSig;
 **颜色参数（TEduBoardColor）**
 ```
 class TEduBoardColor {  
-int red;  
-int green;  
-int blue;  
-int alpha;  
+    int red;  
+    int green;  
+    int blue;  
+    int alpha;  
 }
 ```
 |  成员  | 类型       | 说明 |
@@ -308,9 +308,9 @@ int alpha;
 **白板信息（TEduBoardInfo）**
 ```
 class TEduBoardInfo {  
-String boardId;
-String backgroundUrl;
-TEduBoardColor backgroundColor;
+  String boardId;
+  String backgroundUrl;
+  TEduBoardColor backgroundColor;
 }
 ```
 |  成员  | 类型       | 说明 |
@@ -322,12 +322,12 @@ TEduBoardColor backgroundColor;
 **文件信息（TEduBoardFileInfo）**
 ```
 static class TEduBoardFileInfo {  
-String fileId;               
-String title;               
-String downloadUrl;      
-int pageCount;        
-int pageIndex;       
-List<TEduBoardInfo> boardInfoList;   
+  String fileId;               
+  String title;               
+  String downloadUrl;      
+  int pageCount;        
+  int pageIndex;       
+  List<TEduBoardInfo> boardInfoList;   
 }
 ```
 |  成员  | 类型       | 说明 |
@@ -344,24 +344,24 @@ List<TEduBoardInfo> boardInfoList;
 **白板初始化信息（TEduBoardInitParam）**
 ```
 public static class TEduBoardInitParam {  
-String ratio = "16:9";    //默认白板宽高比（可传格式如“4:3”、“16:9”的字符串）  
-boolean drawEnable = true; //是否允许涂鸦  
-TEduBoardColor globalBackgroundColor = new TEduBoardColor(255, 255, 255, 255);  //全局背景色  
-int toolType = TEduBoardToolType.TEDU_BOARD_TOOL_TYPE_PEN; //白板工具  
-TEduBoardColor brushColor = new TEduBoardColor(255, 0, 0, 255);//画笔颜色  
-int brushThin = 100;  //画笔粗细  
-TEduBoardColor textColor = new TEduBoardColor(0, 0, 0, 255);  //文本颜色  
-int textSize = 320;  //文本粗细  
-int textStyle = TEduBoardTextStyle.TEDU_BOARD_TEXT_STYLE_NORMAL;  //文本样式  
-String textFamily = "sans-serif,serif,monospace"; //文本字体  
-boolean timSync = true;  //是否使用腾讯云 IMSDK 进行实时数据同步  
-int preloadDepth = 5;  //指定图片预加载深度，默认值为5（表示预加载当前页前后5页的图片  
-float smoothLevel = 0.1f; //用于指定笔迹平滑级别，默认值0.1，取值[0, 1]  
-boolean dataSyncEnable = true;  //用于指定是否启用数据同步  
-int contentFitMode = TEduBoardContentFitMode.TEDU_BOARD_CONTENT_FIT_MODE_NONE; //内容自适应模式  
+  String ratio = "16:9";    //默认白板宽高比（可传格式如“4:3”、“16:9”的字符串）  
+  boolean drawEnable = true; //是否允许涂鸦  
+  TEduBoardColor globalBackgroundColor = new TEduBoardColor(255, 255, 255, 255);  //全局背景色  
+  int toolType = TEduBoardToolType.TEDU_BOARD_TOOL_TYPE_PEN; //白板工具  
+  TEduBoardColor brushColor = new TEduBoardColor(255, 0, 0, 255);//画笔颜色  
+  int brushThin = 100;  //画笔粗细  
+  TEduBoardColor textColor = new TEduBoardColor(0, 0, 0, 255);  //文本颜色  
+  int textSize = 320;  //文本粗细  
+  int textStyle = TEduBoardTextStyle.TEDU_BOARD_TEXT_STYLE_NORMAL;  //文本样式  
+  String textFamily = "sans-serif,serif,monospace"; //文本字体  
+  boolean timSync = true;  //是否使用腾讯云 IMSDK 进行实时数据同步  
+  int preloadDepth = 5;  //指定图片预加载深度，默认值为5（表示预加载当前页前后5页的图片  
+  float smoothLevel = 0.1f; //用于指定笔迹平滑级别，默认值0.1，取值[0, 1]  
+  boolean dataSyncEnable = true;  //用于指定是否启用数据同步  
+  int contentFitMode = TEduBoardContentFitMode.TEDU_BOARD_CONTENT_FIT_MODE_NONE; //内容自适应模式  
 };
 ```
-| 参数    | 类型    |默认值 |说明 |
+| 参数	| 类型	|默认值 |说明 |
 | --------- | --------- | --------- | --------- |
 | ratio                   |  String   | 16:9 | 白板尺寸/比例<br> 字符串宽高比，例如设置4:3，白板 SDK 会以参数 ID 所在节点的宽高以4:3的方式来计算出白板的宽高 |
 | drawEnable              |  Boolean  | true | 是否可以涂鸦 |
@@ -421,7 +421,7 @@ void addCallback(TEduBoardCallback callback);
 |  参数值  | 类型       | 说明 |
 | -- | --------- | ------------------ |
 |   callback| TEduBoardCallback | 事件回调监听 |
-
+>?
 1. 建议在 Init 之前调用该方法以支持错误处理；
 2. 内部是弱引用持有 callback 对象。
 
@@ -740,8 +740,7 @@ void setBoardContentFitMode(int mode);
 |  参数值  | 类型       | 说明 |
 | -- | --------- | ------------------ |
 |   mode| int | 要设置的白板内容自适应模式 |
-
-设置自适应模式后会影响所有后续白板内容操作,受影响接口包括：AddFile 和 AddH5PPTFile。
+>?设置自适应模式后会影响所有后续白板内容操作,受影响接口包括：AddFile 和 AddH5PPTFile。
 
 **获取白板内容自适应模式**
 ```
