--- a/PaaS/Docs/实时录制.md
+++ b/PaaS/Docs/实时录制.md
@@ -637,7 +637,7 @@ Body 参数（JSON 格式）
 |:---------------|:------------|:----------------------------------------------------------------------------------------------------------|
 | error_code     | int         | 错误码                                                                                                     |
 | error_msg      | string      | 错误信息                                                                                                   |
-| finish_reason | string | 录制结束原因，“auto”表示房间内长时间没有音视频上行及白板操作导致自动停止录制， “usercall”表示主动调用了停止录制接口 |
+| finish_reason | string | 录制结束原因，“auto”表示房间内长时间(5分钟）没有音视频上行及白板操作导致自动停止录制， “usercall”表示主动调用了停止录制接口 |
 | task_id        | string      | 需要查询结果的录制任务 ID                                                                                      |
 | status         | string      | 录制任务状态，“prepared”表示录制正在准备中（进房/启动录制服务等操作），“recording”表示录制已开始，“finished”表示录制完成 |
 | room_id        | int         | 房间号                                                                                                     |
@@ -848,7 +848,7 @@ Body 参数（JSON 格式）
 |:---------------|:------------|:---------------------------------------------|
 | error_code     | int         | 错误码                                        |
 | error_msg      | string      | 错误信息                                      |
-| finish_reason | string | 录制结束原因，“auto”表示房间内长时间没有音视频上行及白板操作导致自动停止录制， “usercall”表示主动调用了停止录制接口 |
+| finish_reason | string | 录制结束原因，“auto”表示房间内长时间（5分钟）没有音视频上行及白板操作导致自动停止录制， “usercall”表示主动调用了停止录制接口 |
 | timestamp      | int         | 请求发送的 Unix 时间戳，单位秒                     |
 | task_id        | string      | 需要查询结果的录制任务 ID                         |
 | task_type      | string      | 实时录制任务类型固定为`record_online`          |
