更新web端新版本文档

--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -8,7 +8,7 @@
 <!-- COS SDK -->
 <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/cos/5.1.0/cos.min.js"></script>
 <!-- 白板SDK -->
-<script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.3/TEduBoard.min.js"></script>
+<script src="https://tic-res-1259648581.file.myqcloud.com/board/2.3.5/TEduBoard.min.js"></script>
 ```
 
 | 类        | 说明                                       |
@@ -76,6 +76,7 @@
 | getLineStyle         | 获取直线样式                          |
 | setOvalDrawMode         | 设置椭圆绘制模式                        |
 | getOvalDrawMode         | 获取椭圆绘制模式                        |
+| getThumbnailImages         | 根据文件id获取文件的缩略图            |
 
 ## 实例化白板
 
@@ -772,6 +773,20 @@ var drawMode = teduBoard.getOvalDrawMode()
 | drawMode | Number | 1: 固定起始点，起始点和终点的中点为圆心<br/> 2: 固定圆心，起始点为圆心 |
 
 
+#### 根据文件id获取文件的缩略图
+
+```
+var thumbnailImages = teduBoard.getThumbnailImages(fid);
+``
+
+| 参数 | 类型   | 是否必填 | 说明    |
+| ---- | ------ | -------- | ------- |
+| fid  | String | 是    | 文件fid|
+
+
+| 返回值   | 类型   | 说明     |
+| -------- | ------ | -------- |
+| thumbnailImages | Array<String> | 返回文件的缩略图，，不存在的fid和默认文件#DEFAULT，将返回空数组 |
 
 ### 白板事件
 
