--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -1006,3 +1006,12 @@ H5 背景加载状态。
 | 回调参数 | 类型   | 说明           |
 | -------- | ------ | -------------- |
 | fid      | String | 文件的 fid |
+
+#### TEduBoard.EVENT.TEB_GOTOSTEP
+
+PPT动画步数回调
+
+| 回调参数 | 类型   | 说明           |
+| -------- | ------ | -------------- |
+| step      | Number | 当前页的动画步数 |
+| count      | Number | 当前白板页总步数 |
