web端增加getThumbnailImages说明

--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -775,9 +775,11 @@ var drawMode = teduBoard.getOvalDrawMode()
 
 #### 根据文件id获取文件的缩略图
 
+> 注意： 该接口会按照规则返回缩略图的url地址，但不能保证缩略图一定存在。缩略图功能必须由[文档转码服务](../../文档转码.md)方式发起，且参数中要增加转缩略图的参数。
+
 ```
 var thumbnailImages = teduBoard.getThumbnailImages(fid);
-``
+```
 
 | 参数 | 类型   | 是否必填 | 说明    |
 | ---- | ------ | -------- | ------- |
