修复错误的文档

--- a/PaaS/Docs/SDK文档/Web/互动课堂接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动课堂接入文档.md
@@ -61,7 +61,7 @@ tic.init(sdkAppId, disableModule, callback);
 参数 | 类型 | 必填 | 说明 |
 ---------| ---- | --------- | -----
 sdkAppId | Number | 是 | 腾讯云应用的唯一标识，可在 [实时音视频控制台](https://console.cloud.tencent.com/rav) 查看
-disableModule | Number | 是<br>默认TIC.Constant.TICDisableModule.TIC_DISABLE_MODULE_NONE | 禁用TIC内部模块<br/> TIC.Constant.TICDisableModule.TIC_DISABLE_MODULE_NONE 不禁用任何模块<br/> TIC.Constant.TICDisableModule.TIC_DISABLE_MODULE_TRTC 禁用TRTC模块
+disableModule | Number | 是<br>默认TIC.CONSTANT.TICDisableModule.TIC_DISABLE_MODULE_NONE | 禁用TIC内部模块<br/> TIC.CONSTANT.TICDisableModule.TIC_DISABLE_MODULE_NONE 不禁用任何模块<br/> TIC.CONSTANT.TICDisableModule.TIC_DISABLE_MODULE_TRTC 禁用TRTC模块
 callback | Function | 是 | 回调
 
 - callback 回调参数：
