paas readme/web 互动白板接入文档

--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -584,7 +584,7 @@ teduBoard.setBoardRatio(ratio)
 | ----- | ------ | -------- | --------------------- |
 | ratio | String | 是       | 白板比例，如4:3，16:9 |
 
-#### 获取文本字体
+#### 获取当前白板显示比例
 
 ```
 var ratio = teduBoard.getBoardRatio()
