大房间joinclassroom注释

--- a/PaaS/Docs/SDK文档/Android/互动课堂接入文档.md
+++ b/PaaS/Docs/SDK文档/Android/互动课堂接入文档.md
@@ -265,7 +265,7 @@ mTrtcCloud.stopLocalPreview();
 
 
 注意：
-> 1000人以上大房间音视频会增加600ms左右延迟，为避免白板和音视频的不同步，`TIC`内部已经实现对时方案。
+> 1000人以上大房间音视频会增加少许延迟，为避免白板和音视频的不同步，`TIC`内部已经实现对时方案。
 > 由于对时方案依赖于视频帧SEI消息，只有开启视频（摄像头或屏幕分享）才支持同步，否则同步失效。
 
 
