--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -77,6 +77,8 @@
 | setOvalDrawMode         | 设置椭圆绘制模式                        |
 | getOvalDrawMode         | 获取椭圆绘制模式                        |
 | getThumbnailImages         | 根据文件id获取文件的缩略图            |
+| applyFileTranscode         | 申请文件转码            |
+| getFileTranscodeStatus         | 查询转码文件状态            |
 
 ## 实例化白板
 
@@ -244,12 +246,14 @@ teduBoard.deleteFile(fid)
 #### 切换文件
 
 ```
-teduBoard.switchFile(fid)
+teduBoard.switchFile(fid, pageIndex, stepIndex)
 ```
 
 | 参数 |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
 | fid |   String | 是 | 要切换到的文件 ID，文件 ID 为必填项，为空字符串将导致文件切换失败 |
+| pageIndex |   Number | 否 | 翻到指定页，不填表示以历史数据为指定页 |
+| stepIndex |   Number | 否 | 翻到指定步，不填表示以历史数据为指定步 |
 
 
 #### 获取当前文件 ID
@@ -584,7 +588,7 @@ teduBoard.setBoardRatio(ratio)
 | ----- | ------ | -------- | --------------------- |
 | ratio | String | 是       | 白板比例，如4:3，16:9 |
 
-#### 获取文本字体
+#### 获取当前白板显示比例
 
 ```
 var ratio = teduBoard.getBoardRatio()
@@ -789,6 +793,60 @@ var thumbnailImages = teduBoard.getThumbnailImages(fid);
 | 返回值   | 类型   | 说明     |
 | -------- | ------ | -------- |
 | thumbnailImages | Array<String> | 返回文件的缩略图，，不存在的fid和默认文件#DEFAULT，将返回空数组 |
+
+
+#### 申请文件转码
+
+> 支持PPT，DOC，PDF文件转码。调用接接口会触发TEB_TRANSCODEPROGRESS事件。
+
+- 默认情况下，PPT 文档（后缀名为.ppt或.pptx）会转码成HTML5页面，能够还原PPT原有的动画效果，其他文档会转码成静态图片。
+- PPT动态转码成HTML5页面的时间大约为每页1s，文档转码成静态图片的时间大约为每页0.5s
+
+```
+teduBoard.applyFileTranscode(fileInfo, transcodeConfig);
+```
+
+| 参数 | 类型   | 是否必填 | 说明    |
+| ---- | ------ | -------- | ------- |
+| fileInfo  | Object | 是 | 文件信息 |
+| fileInfo.data | File | 是 | 文件对象，通常为input标签的value值 |
+| fileInfo.userData | String | 否 | 该参数会在上传文件进度，转码任务发起成功事件回调中透传回来 |
+| transcodeConfig  | Object | 是 | 转码参数 |
+| transcodeConfig.minResolution | String | 是 |最小分辨率，如960x540，中间分隔符为x  |
+| transcodeConfig.isStaticPPT | Boolean | 否 | 当isStaticPPT为false时，后缀名为.ppt或.pptx的文档会动态转码成HTML5页面，其他格式的文档会静态转码成图片，如果isStaticPPT为true，所有格式的文档会静态转码成图片 |
+| transcodeConfig.thumbnailResolution | String | 否 | 缩略图分辨率，如200x200，中间分隔符为x。所有转图片的文件都默认支持缩略图，但不支持指定分辨率。 |
+
+> 示例
+
+```
+teduBoard.applyFileTranscode({
+  data: document.getElementById('file_input').value,
+  userData: 'transcode'
+}, {
+  minResolution: '960x540',
+  isStaticPPT: false,
+  thumbnailResolution: '200x200'
+})
+```
+
+#### 查询转码文件进度
+
+> 调用此接口，会回调TEB_TRANSCODEPROGRESS事件；通常情况不需要调用该接口。
+
+```
+teduBoard.getFileTranscodeProgress(data)
+```
+| 参数 | 类型   | 是否必填 | 说明    |
+| ---- | ------ | -------- | ------- |
+| data  | Object | 是 | 文件信息 |
+| data.taskId | String | 是 | 申请文件转码成功后，会在TEB_TRANSCODE事件回调tasdkId |
+
+```
+// 示例
+teduBoard.getFileTranscodeProgress({
+  taskId: "gvk95kkhhr7q46cke2nb"
+})
+```
 
 ### 白板事件
 
@@ -1017,3 +1075,24 @@ PPT动画步数回调
 | -------- | ------ | -------------- |
 | step      | Number | 当前页的动画步数 |
 | count      | Number | 当前白板页总步数 |
+
+
+#### TEduBoard.EVENT.TEB_TRANSCODEPROGRESS
+
+转码进度回调
+
+| 回调参数 | 类型   | 说明           |
+| -------- | ------ | -------------- |
+| status      | String | |
+| data      | Object | 回调数据 |
+| data.code | String | 错误码 |
+| data.message| String | 错误信息 | 
+| data.Status | String | ERROR： 转码错误<br/>CREATE：发起转码任务<br/>QUEUED：排队中<br/>PROCESSING：转码中<br/>FINISHED：转码完成 |
+| data.TaskId | String | 任务id |
+| data.Pages | Number | 总页数 |
+| data.Progress | Number | 进度 |
+| data.Resolution | String | 转码后分辨率 |
+| data.ResultUrl | String | 转码后的url |
+| data.ThumbnailResolution | String | 缩略图分辨率 |
+| data.ThumbnailUrl | String | 缩略图的url，添加到白板后可通过getThumbnailImages获取完整的缩略图 |
+| data.Title | String | 文件名 |
