修改switchFile接口文档

--- a/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动白板接入文档.md
@@ -246,14 +246,14 @@ teduBoard.deleteFile(fid)
 #### 切换文件
 
 ```
-teduBoard.switchFile(fid, pageIndex, stepIndex)
+teduBoard.switchFile(fid, boardId, stepIndex)
 ```
 
 | 参数 |  类型   | 是否必填 | 说明 |
 | ----------- | -----------| ---- | ------------------ |
 | fid |   String | 是 | 要切换到的文件 ID，文件 ID 为必填项，为空字符串将导致文件切换失败 |
-| pageIndex |   Number | 否 | 翻到指定页，不填表示以历史数据为指定页 |
-| stepIndex |   Number | 否 | 翻到指定步，不填表示以历史数据为指定步 |
+| boardId |   String | 否 | 切换到指定页，不填表示以历史数据为指定页 |
+| stepIndex |   Number | 否 | 切换到指定步，不填表示以历史数据为指定步 |
 
 
 #### 获取当前文件 ID
